# turbo-vision-4-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  buttons_dump.ans  dialog_dump.ans  screen-dump.txt  screen_dump.ans
debug/: README.md  key_debug.rs
demo/: rust_editor.rs
docs/: ANSI_DUMP_FEATURE.md  BORLAND-PALETTE-CHART.md  COMMAND_SET_SYSTEM.md  CURRENT-STATUS-AND-TODO.md  CURRENT-STATUS-TODO.md  DISCREPANCIES.md  F12_SCREEN_DUMP.md  FILE_DIALOG_FIXES.md  FOCUS_ARCHITECTURE.md  FOCUS_CONSOLIDATION.md  LIST_COMPONENTS_PLAN.md  MISSING_FEATURES.md  RUST-GUIDELINES-RECOMMENDATIONS.md  SCREEN_DUMP_SHORTCUTS_SUMMARY.md  STATIC-TO-DI-ANALYSIS.md  TERMINAL_LEVEL_SHORTCUTS.md  TO-DO-LIST.md  TURBO-VISION-DESIGN.md  TURBOVISION-DESIGN.md  ansi-dump.md
examples/: BIORHYTHM_COLORED_BLOCKS.md  BIORHYTHM_EXAMPLE.md  BIORHYTHM_STATUS.md  BIORHYTHM_USAGE.md  CLOSE_BUTTON_BEHAVIOR.md  DIALOG_CLOSE_BUTTON_FIX.md  README.md  README_TPROGRAM.md  TPROGRAM_EXAMPLES.md  TPROGRAM_SUMMARY.md  beep_demo.rs  biorhythm.rs  biorhythm_chrono.rs  child_access.rs  command_set.rs  command_set_demo.rs  custom_application_rust_example.md  custom_program_cpp_example.md  desktop_logo.rs  dialog_example.rs  dump_demo.rs  editor.rs  editor_demo.rs  event_debug.rs  file_browser.rs  file_dialog.rs  file_editor.rs  input_dialog.rs  label_link_demo.rs  list_components.rs  menu.rs  menu_status_data.rs  minimal_app.rs  mouse_test.rs  msgbox_test.rs  outline_demo.rs  quick_start_00.rs  quick_start_01.rs  quick_start_02.rs  quick_start_03.rs  (+12 more)
src/: lib.rs
src/app/: application.rs  mod.rs
(+85 files in other folders)
